--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,28 +5,26 @@ services:
     image: postgres:11.2
     volumes:
       - postgres_data:/var/lib/postgresql/data
-  redis:
-    env_file: .env
-    image: 'redis:3.2-alpine'
-    command: redis-server --requirepass ${REDIS_PASSWORD}
-    volumes:
-      - redis_data:/var/lib/redis/data
+    environment:
+      - POSTGRES_PASSWORD=reallynotsecretbutitisdev
   web:
     env_file: .env
     environment:
-      - RAILS_ENV=production
-      - REDIS_HOST=redis
+      - RAILS_ENV=development
       - POSTGRES_HOST=db
-    build: .
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=reallynotsecretbutitisdev
+    build:
+      context: .
+      args:
+        - BUNDLE_INSTALL_EXCLUDE=''
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
-      - .:/myapp
+      - .:/app
     ports:
       - "3000:3000"
     depends_on:
       - db
-      - redis
 
 volumes:
   postgres_data:
-  redis_data:
