--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -2,3 +2,7 @@
   - default
   - mailers
   - mail_handlers
+  -
+schedule:
+  UserCleanupJob:
+    cron: '0 8 1 * *'  # At 08:00:00 on each first of the month => https://crontab.guru/#0_8_1_*_*
