Adjust MailAlias guard clauses and disable unneccessary rule

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -73,6 +73,9 @@ Style/Documentation:
 Style/FrozenStringLiteralComment:
   Enabled: false
 
+Style/GuardClause:
+  Enabled: false
+
 # Enable cops that are disabled by default, but are useful nonetheless
 # See https://github.com/bbatsov/rubocop/blob/master/config/disabled.yml
 
