Cleanup expired emails (#73)
* Add job that removes expired emails

* Add test for expired email job

* Implement suggested expiration times from RFC

* Make spec so much cleaner, add 2 tests

* Remove no-actions text, remove unnecessary guard clause

* More testing

* Fix formatting in inform_slack

* Switch around faker dates#between

* Update cleanup_expired_stored_mails_job.rb

--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -2,7 +2,12 @@
   - default
   - mailers
   - mail_handlers
-  -
+
 schedule:
   UserCleanupJob:
     cron: '0 9 1 * *'  # At 09:00:00 on each first of the month => https://crontab.guru/#0_9_1_*_*
+  cleanup_expired_stored_mails:
+    cron: '0 0 9 * * *'   # Runs every day at 9AM
+    class: CleanupExpiredStoredMailsJob
+    queue: mail_handlers
+    description: Cleanup job for expired emails
