--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -34,6 +34,9 @@ Metrics/MethodLength:
   Exclude:
     - 'db/migrate/*'
 
+Rails/FilePath:
+  EnforcedStyle: arguments
+
 Rails/HttpPositionalArguments:
   Enabled: false
 
