Added dynamic scheduling and moved mailer to moderation mailer

--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -1,11 +1,6 @@
+:dynamic: true
+
 :queues:
   - default
   - mailers
   - mail_handlers
-
-:schedule:
-  :mail_moderation_reminder:
-    cron: '0 0 15 * * *'
-    class: MailModerationReminderJob
-    queue: mail_handlers
-    description: Reminder job for to be moderated mails
