Rename Metrics/LineLength cop to Layout/LineLength cop and fix rubocop rails_helper include sort

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -27,7 +27,7 @@ Metrics/BlockLength:
     - 'config/routes.rb'
     - 'spec/**/*'
 
-Metrics/LineLength:
+Layout/LineLength:
   Max: 100
 
 Metrics/MethodLength:
