--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -13,6 +13,7 @@ steps:
     plugins:
       - docker-compose#v2.6.0:
           run: app
+          image-name: app-amber
           config: docker-compose.buildkite.yml
 
   - label: ":rubocop: Lint"
@@ -20,6 +21,7 @@ steps:
     plugins:
       - docker-compose#v2.6.0:
           run: app
+          image-name: app-amber
           config: docker-compose.buildkite.yml
 
   - wait
