--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -104,3 +104,12 @@ Style/Send:
 
 Style/StringMethods:
   Enabled: true
+
+Style/HashEachMethods:
+  Enabled: true
+
+Style/HashTransformKeys:
+  Enabled: true
+
+Style/HashTransformValues:
+  Enabled: true
