--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -11,3 +11,6 @@ schedule:
     class: CleanupExpiredStoredMailsJob
     queue: mail_handlers
     description: Cleanup job for expired emails
+  HealthCheckJob:
+    cron : '*/30 * * * *' # Every 30 minutes => https://crontab.guru/#*/30_*_*_*_*
+    args: ['sidekiq']
