Fix Rubocop config and violation

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -113,3 +113,10 @@ Style/HashTransformKeys:
 
 Style/HashTransformValues:
   Enabled: true
+
+Lint/RaiseException:
+  Enabled: true
+
+
+Lint/StructNewOverride:
+  Enabled: true
