--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,6 +11,7 @@ AllCops:
     - 'vendor/**/*'
   DisplayCopNames: true
   DisplayStyleGuide: true
+  NewCops: enable
 
 Rails/UnknownEnv:
   Environments:
