--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -8,7 +8,7 @@ services:
       context: .
       dockerfile: Dockerfile
       args:
-        - BUNDLE_INSTALL_EXCLUDE='test'
+        - BUNDLE_INSTALL_EXCLUDE=''
     depends_on:
       - db
     environment:
