--- a/config/cable.yml
+++ b/config/cable.yml
@@ -5,9 +5,7 @@ test:
   adapter: async
 
 production: &production
-  adapter: redis
-  url: redis://:<%= ENV['REDIS_PASSWORD'] %>@<%= ENV['REDIS_HOST'] %>:6379/1
-  channel_prefix: amber_production
+  adapter: async
 
 staging:
   <<: *production
