--- a/config/cable.yml
+++ b/config/cable.yml
@@ -5,7 +5,9 @@ test:
   adapter: async
 
 production: &production
-  adapter: async
+  adapter: redis
+  url: redis://:<%= ENV['REDIS_PASSWORD'] %>@<%= ENV['REDIS_HOST'] %>:6379/1
+  channel_prefix: amber_production
 
 staging:
   <<: *production
