--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -8,6 +8,8 @@
 schedule:
   UserCleanupJob:
     cron: '0 9 1 * *'  # At 09:00:00 on each first of the month => https://crontab.guru/#0_9_1_*_*
+  SoftDeleteCleanupJob:
+    cron: '0 9 1 * *'  # At 09:00:00 on each first of the month => https://crontab.guru/#0_9_1_*_*
   cleanup_expired_stored_mails:
     cron: '0 0 9 * * *'   # Runs every day at 9AM
     class: CleanupExpiredStoredMailsJob
