fix: request logging in Docker container

--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -17,6 +17,7 @@ services:
     env_file: .env
     environment:
       - POSTGRES_HOST=db
+    command: bundle exec rails server -b 0.0.0.0
     ports:
       - 3000:3000
     volumes:
