--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -87,4 +87,5 @@ jobs:
         env:
           RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
         run: |
-          docker run -e RAILS_ENV=test -e POSTGRES_USER=postgres -e RAILS_MASTER_KEY --network=host app bin/ci.sh spec
+          docker run -e RAILS_ENV=test -e POSTGRES_USER=postgres -e POSTGRES_HOST=localhost -e RAILS_MASTER_KEY \
+            --network=host app bin/ci.sh spec
