--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -61,6 +61,8 @@ jobs:
     services:
       db:
         image: postgres:11.2
+        env:
+          TZ: Europe/Amsterdam
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -87,5 +89,5 @@ jobs:
         env:
           RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
         run: |
-          docker run -e POSTGRES_USER=postgres -e POSTGRES_HOST=localhost -e RAILS_MASTER_KEY --network=host app \
-            bin/ci.sh spec
+          docker run -e TZ=Europe/Amsterdam -e POSTGRES_USER=postgres -e POSTGRES_HOST=localhost -e RAILS_MASTER_KEY \
+            --network=host app bin/ci.sh spec
