--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -107,6 +107,8 @@ jobs:
     uses: csvalpha/amber-api/.github/workflows/continuous-integration.yml@staging
     with:
       sha: ${{ needs.merge.outputs.sha }}
+    secrets:
+      rails_master_key: ${{ secrets.RAILS_MASTER_KEY }}
 
   publish_image:
     name: Publish Image
