--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -9,6 +9,9 @@ on:
       sha:
         required: false
         type: string
+    secrets:
+      rails_master_key:
+        required: true
 
 jobs:
   build:
@@ -81,7 +84,8 @@ jobs:
           name: app
 
       - name: Test
-#        env:
-#          RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
+        env:
+          RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
         run: |
-          docker run -e POSTGRES_USER=postgres -e POSTGRES_HOST=localhost --network=host app bin/ci.sh spec
+          docker run -e POSTGRES_USER=postgres -e POSTGRES_HOST=localhost -e RAILS_MASTER_KEY --network=host app \
+            bin/ci.sh spec
