--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -35,6 +35,16 @@ jobs:
     name: Lint
     runs-on: ubuntu-latest
     needs: build
+    services:
+      db:
+        image: postgres:11.2
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
     steps:
       - name: Checkout code
         uses: actions/checkout@ec3a7ce113134d7a93b817d10a8272cb61118579 # renovate: tag=v2.4.0
@@ -51,8 +61,11 @@ jobs:
           name: app
 
       - name: Lint
+        env:
+          RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
         run: |
-          docker run -t app bin/ci.sh lint
+          docker run -e POSTGRES_USER=postgres -e POSTGRES_HOST=localhost -e RAILS_MASTER_KEY --network=host -t app \
+            bin/ci.sh lint
 
   test:
     name: Test
