--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - POSTGRES_HOST=db
   web:
     env_file: .env
-    image: docker.csvalpha.nl/amber-api:latest
+    image: ghcr.io/csvalpha/amber-api:latest
     depends_on:
       - db
       - redis
