feat: GitHub Actions (#277)
* feat: add workflow configurations

* fix(ci): correctly set network

* fix(ci): remove pseudo-tty flags from docker run

* fix(ci): specify POSTGRES_HOST

* chore(ci): remove unnecessary env variable setting

* feat: add workflow configurations

* fix(ci): correctly set network

* fix(ci): remove pseudo-tty flags from docker run

* fix(ci): specify POSTGRES_HOST

* chore(ci): remove unnecessary env variable setting

* fix(ci): try setting timezone

* fix(ci): set PGTZ env variable too

* fix(ci): remove timezone stuff and improve user_cleanup_job_spec

* fix(jobs): change end_date to correct number

* feat: problem matchers

* chore: change documentation

* refactor(ci): try building without RAILS_MASTER_KEY

* fix(ci): default camo_key to empty string

* fix(ci): readd RAILS_MASTER_KEY stuff

* test(ci): test problem matchers

* fix(problemmatchers): rspec regex

* fix(problemmatchers): escape dot correctly

* fix(problemmatchers): remove escaped backslash

* chore: remove unused build-args setting and add -t to docker run

* fix(ci): add db container to lint step too

* chore(ci): remove -t from docker run

* refactor: update all action tags to exclude prefix

* fix: image repository

* chore: remove unnecessary step id

* fix: set Sentry release

* fix: lint error in Sentry initializer

* fix: use whitespace character in regex

* fix: also change sidekiq image url

Co-authored-by: Wilco <wilcovanbeijnum@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - redis_data:/var/lib/redis/data
   sidekiq:
     env_file: .env
-    image: docker.csvalpha.nl/amber-api:latest
+    image: ghcr.io/csvalpha/amber-api:latest
     command: sidekiq -C config/sidekiq.yml
     depends_on:
       - db
@@ -25,7 +25,7 @@ services:
       - POSTGRES_HOST=db
   web:
     env_file: .env
-    image: docker.csvalpha.nl/amber-api:latest
+    image: ghcr.io/csvalpha/amber-api:latest
     depends_on:
       - db
       - redis
