--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -200,7 +200,7 @@ jobs:
           echo '::set-output name=conclusion::success'
           for RESULT in $RESULTS; do
             if [ "$RESULT" = 'cancelled' ] || [ "$RESULT" = 'failure' ]; then
-              echo '::set-output name=conclusion::'$RESULT
+              echo '::set-output name=conclusion::'"$RESULT"
               break
             fi
           done
