--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -155,7 +155,7 @@ jobs:
         env:
           STAGE: ${{ needs.metadata.outputs.stage }}
         with:
-          host: csvalpha.nl
+          host: ssh.csvalpha.nl
           username: github-actions
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           envs: PROJECT_NAME,STAGE
