--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -5,11 +5,12 @@
   - action_mailbox_routing
   - action_mailbox_incineration
 
-schedule:
-  UserCleanupJob:
-    cron: '0 9 1 * *'  # At 09:00:00 on each first of the month => https://crontab.guru/#0_9_1_*_*
-  SoftDeleteCleanupJob:
-    cron: '0 9 1 * *'  # At 09:00:00 on each first of the month => https://crontab.guru/#0_9_1_*_*
-  HealthCheckJob:
-    cron : '*/30 * * * *' # Every 30 minutes => https://crontab.guru/#*/30_*_*_*_*
-    args: ['sidekiq']
+:scheduler:
+  :schedule:
+    UserCleanupJob:
+      cron: '0 9 1 * *'  # At 09:00:00 on each first of the month => https://crontab.guru/#0_9_1_*_*
+    SoftDeleteCleanupJob:
+      cron: '0 9 1 * *'  # At 09:00:00 on each first of the month => https://crontab.guru/#0_9_1_*_*
+    HealthCheckJob:
+      cron : '*/30 * * * *' # Every 30 minutes => https://crontab.guru/#*/30_*_*_*_*
+      args: ['sidekiq']
