--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -93,11 +93,12 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     env:
-      PORT: 9090
       CAMO_KEY: camo_key_123
     services:
       camo:
         image: rx14/camo.cr:latest
+      env:
+        PORT: 9090
       db:
         image: postgres:14.7
         env:
@@ -127,7 +128,7 @@ jobs:
 
       - name: Test
         env:
-          CAMO_HOST: localhost:${{ env.PORT }}
+          CAMO_HOST: localhost:9090
         run: |
           mkdir coverage
           docker run \
