--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,8 @@ POSTGRES_PASSWORD=<password>
 HOST=csvalpha.nl
 
 NGROK_HOST=<subdomain>.ngrok.io
+
+NOREPLY_EMAIL=no-reply@development.csvalpha.nl
+ICT_EMAIL=ict@development.csvalpha.nl
+PRIVACY_EMAIL=privacy@development.csvalpha.nl
+ADMIN_EMAIL=mailbeheer@development.csvalpha.nl
