edited .env file

--- a/.env.example
+++ b/.env.example
@@ -15,4 +15,4 @@ NGROK_HOST=<subdomain>.ngrok.io
 NOREPLY_EMAIL=no-reply@development.csvalpha.nl
 ICT_EMAIL=ict@development.csvalpha.nl
 PRIVACY_EMAIL=privacy@development.csvalpha.nl
-ADMIN_EMAIL=mailbeheer@development.csvalpha.nl
+MAILADMIN_EMAIL=mailbeheer@development.csvalpha.nl
