--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,7 +4,8 @@ require:
   - rubocop-rails
 
 AllCops:
-  TargetRailsVersion: 5.1
+  TargetRailsVersion: 7.0
+  TargetRubyVersion: 3.1
   Exclude:
     - 'db/schema.rb'
     - 'config/initializers/secret_token.rb'
