--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -5,6 +5,7 @@ require:
 
 AllCops:
   TargetRailsVersion: 5.1
+  TargetRubyVersion: 3.2
   Exclude:
     - 'db/schema.rb'
     - 'config/initializers/secret_token.rb'
