--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -26,16 +26,32 @@ jobs:
             exit 1
           fi
 
+  set-environment:
+    name: Set Environment
+    runs-on: ubuntu-latest
+    needs: branch_check
+    outputs:
+      branch_ref: ${{ steps.set-ref.outputs.branch_ref }}
+    steps:
+      - name: Determine environment reference
+        id: set-ref
+        run: |
+          if [ "$GITHUB_REF_NAME" = 'master' ]; then
+            echo "branch_ref=master" >> $GITHUB_OUTPUT
+          else
+            echo "branch_ref=staging" >> $GITHUB_OUTPUT
+          fi
+
   metadata:
     name: Metadata
     runs-on: ubuntu-latest
-    needs: branch_check
+    needs: set-environment
     outputs:
       has_diff: ${{ steps.get_metadata.outputs.has_diff }}
       stage: ${{ steps.get_metadata.outputs.stage }}
     steps:
       - name: Checkout code
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        uses: actions/checkout@v4
 
       - name: Get metadata
         id: get_metadata
@@ -51,7 +67,6 @@ jobs:
                 echo 'has_diff=false' >> "$GITHUB_OUTPUT"
               fi
             fi
-
             echo 'stage=production' >> "$GITHUB_OUTPUT"
           else
             echo 'stage=staging' >> "$GITHUB_OUTPUT"
@@ -80,11 +95,11 @@ jobs:
 
       - name: Checkout code
         if: fromJSON(needs.metadata.outputs.has_diff)
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        uses: actions/checkout@v4
 
       - name: Run merge
         if: fromJSON(needs.metadata.outputs.has_diff)
-        uses: devmasx/merge-branch@854d3ac71ed1e9deb668e0074781b81fdd6e771f # tag=v1.4.0
+        uses: devmasx/merge-branch@v1.4.0
         with:
           type: now
           from_branch: staging
@@ -100,20 +115,20 @@ jobs:
 
   continuous_integration:
     name: Continuous Integration
-    needs: [metadata, merge]
+    needs: [metadata, merge, set-environment]
     if: fromJSON(needs.metadata.outputs.has_diff)
-    uses: csvalpha/amber-api/.github/workflows/continuous-integration.yml@staging
+    uses: csvalpha/amber-api/.github/workflows/continuous-integration.yml@${{ needs.set-environment.outputs.branch_ref }}
     with:
       sha: ${{ needs.merge.outputs.sha }}
     secrets:
       codecov_token: ${{ secrets.CODECOV_TOKEN }}
       rails_master_key: ${{ secrets.RAILS_MASTER_KEY }}
-      
+
   publish_image:
     name: Publish Image
-    needs: [metadata, merge]
+    needs: [metadata, merge, set-environment]
     if: fromJSON(needs.metadata.outputs.has_diff)
-    uses: csvalpha/amber-api/.github/workflows/publish-image.yml@staging
+    uses: csvalpha/amber-api/.github/workflows/publish-image.yml@${{ needs.set-environment.outputs.branch_ref }}
     with:
       sha: ${{ needs.merge.outputs.sha }}
     secrets:
@@ -138,19 +153,19 @@ jobs:
           fi
 
       - name: Checkout code
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        uses: actions/checkout@v4
         with:
           ref: ${{ needs.merge.outputs.sha }}
 
       - name: Start deployment
-        uses: bobheadxi/deployments@648679e8e4915b27893bd7dbc35cb504dc915bc8 # v1.5.0
+        uses: bobheadxi/deployments@v1.5.0
         id: start_deployment
         with:
           step: start
           env: ${{ needs.metadata.outputs.stage }}
 
       - name: Deploy
-        uses: appleboy/ssh-action@8faa84277b88b6cd1455986f459aa66cf72bc8a3 # v1.2.1
+        uses: appleboy/ssh-action@v1.2.1
         env:
           STAGE: ${{ needs.metadata.outputs.stage }}
         with:
@@ -165,7 +180,7 @@ jobs:
             docker-compose up -d
 
       - name: Finalize Sentry release
-        uses: getsentry/action-release@ffb64465339ef6fb868e2fc261318d78ae0ed8d9 # v1.10.5
+        uses: getsentry/action-release@v1.10.5
         env:
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
           SENTRY_ORG: ${{ vars.SENTRY_ORG_NAME }}
@@ -176,7 +191,7 @@ jobs:
           set_commits: skip
 
       - name: Finish deployment
-        uses: bobheadxi/deployments@648679e8e4915b27893bd7dbc35cb504dc915bc8 # v1.5.0
+        uses: bobheadxi/deployments@v1.5.0
         if: steps.start_deployment.conclusion == 'success' && always()
         with:
           step: finish
@@ -207,7 +222,7 @@ jobs:
           done
 
       - name: Update Continuous Delivery check run
-        uses: LouisBrunner/checks-action@6b626ffbad7cc56fd58627f774b9067e6118af23 # v2.0.0
+        uses: LouisBrunner/checks-action@v2.0.0
         with:
           sha: ${{ needs.merge.outputs.sha }}
           token: ${{ github.token }}
