--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -4,15 +4,21 @@ on:
   workflow_dispatch:
     inputs:
       merge:
-        description: Merge staging into master first? (y/N)
+        type: boolean
+        description: Merge staging into master first?
         required: false
-        default: 'n'
+        default: false
+      ignore_metadata_diff:
+        type: boolean
+        description: Perform all jobs, regardless of whether there are actual changes?
+        required: false
+        default: false
 
 concurrency:
   group: cd-${{ github.ref_name }}
 
 env:
-  PROJECT_NAME: amber-api
+  PROJECT_NAME: amber-ui
 
 jobs:
   branch_check:
@@ -26,40 +32,24 @@ jobs:
             exit 1
           fi
 
-  set-environment:
-    name: Set Environment
-    runs-on: ubuntu-latest
-    needs: branch_check
-    outputs:
-      branch_ref: ${{ steps.set-ref.outputs.branch_ref }}
-    steps:
-      - name: Determine environment reference
-        id: set-ref
-        run: |
-          if [ "$GITHUB_REF_NAME" = 'master' ]; then
-            echo "branch_ref=master" >> $GITHUB_OUTPUT
-          else
-            echo "branch_ref=staging" >> $GITHUB_OUTPUT
-          fi
-
   metadata:
     name: Metadata
     runs-on: ubuntu-latest
-    needs: set-environment
+    needs: branch_check
     outputs:
       has_diff: ${{ steps.get_metadata.outputs.has_diff }}
       stage: ${{ steps.get_metadata.outputs.stage }}
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
       - name: Get metadata
         id: get_metadata
         env:
-          INPUT_MERGE: ${{ github.event.inputs.merge }}
+          INPUT_MERGE: ${{ inputs.merge }}
         run: |
           if [ "$GITHUB_REF_NAME" = 'master' ]; then
-            if [ "${INPUT_MERGE,,}" = 'y' ]; then
+            if [ "$INPUT_MERGE" == 'true' ]; then
               git fetch origin staging
               if ! git diff origin/master origin/staging --exit-code; then
                 echo 'has_diff=true' >> "$GITHUB_OUTPUT"
@@ -76,7 +66,7 @@ jobs:
     name: Merge
     runs-on: ubuntu-latest
     needs: metadata
-    if: github.event.inputs.merge == 'y'
+    if: inputs.merge
     outputs:
       sha: ${{ steps.get_sha.outputs.sha }}
     steps:
@@ -95,11 +85,11 @@ jobs:
 
       - name: Checkout code
         if: fromJSON(needs.metadata.outputs.has_diff)
-        uses: actions/checkout@v4
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
       - name: Run merge
-        if: fromJSON(needs.metadata.outputs.has_diff)
-        uses: devmasx/merge-branch@v1.4.0
+        if: fromJSON(needs.metadata.outputs.has_diff) || inputs.ignore_metadata_diff
+        uses: devmasx/merge-branch@854d3ac71ed1e9deb668e0074781b81fdd6e771f # v1.4.0
         with:
           type: now
           from_branch: staging
@@ -108,16 +98,16 @@ jobs:
 
       - name: Get merge commit SHA
         id: get_sha
-        if: fromJSON(needs.metadata.outputs.has_diff)
+        if: fromJSON(needs.metadata.outputs.has_diff) || inputs.ignore_metadata_diff
         run: |
           git fetch origin master
           echo 'sha='"$(git rev-parse origin/master)" >> "$GITHUB_OUTPUT"
 
   continuous_integration:
     name: Continuous Integration
-    needs: [metadata, merge, set-environment]
-    if: fromJSON(needs.metadata.outputs.has_diff)
-    uses: csvalpha/amber-api/.github/workflows/continuous-integration.yml@${{ needs.set-environment.outputs.branch_ref }}
+    needs: [metadata, merge]
+    if: fromJSON(needs.metadata.outputs.has_diff) || inputs.ignore_metadata_diff
+    uses: ./.github/workflows/continuous-integration.yml
     with:
       sha: ${{ needs.merge.outputs.sha }}
     secrets:
@@ -126,9 +116,9 @@ jobs:
 
   publish_image:
     name: Publish Image
-    needs: [metadata, merge, set-environment]
-    if: fromJSON(needs.metadata.outputs.has_diff)
-    uses: csvalpha/amber-api/.github/workflows/publish-image.yml@${{ needs.set-environment.outputs.branch_ref }}
+    needs: [metadata, merge]
+    if: fromJSON(needs.metadata.outputs.has_diff) || inputs.ignore_metadata_diff
+    uses: ./.github/workflows/publish-image.yml
     with:
       sha: ${{ needs.merge.outputs.sha }}
     secrets:
@@ -140,32 +130,23 @@ jobs:
     needs: [metadata, merge, continuous_integration, publish_image]
     if: |
       (github.ref_name == 'staging' || github.ref_name == 'master') && ((github.ref_name == 'master' &&
-      github.event.inputs.merge == 'y' && fromJSON(needs.metadata.outputs.has_diff) && success()) ||
-      ((github.event.inputs.merge != 'y' || !fromJSON(needs.metadata.outputs.has_diff)) && !cancelled()))
+      inputs.merge && (fromJSON(needs.metadata.outputs.has_diff) || inputs.ignore_metadata_diff) && success()) ||
+      ((!inputs.merge || !(fromJSON(needs.metadata.outputs.has_diff) || inputs.ignore_metadata_diff)) && !cancelled()))
     steps:
-      - name: Get environment URL
-        id: get_url
-        run: |
-          if [ "$GITHUB_REF_NAME" = 'master' ]; then
-            echo 'environment_url=https://csvalpha.nl/api' >> "$GITHUB_OUTPUT"
-          else
-            echo 'environment_url=https://staging.csvalpha.nl/api' >> "$GITHUB_OUTPUT"
-          fi
-
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           ref: ${{ needs.merge.outputs.sha }}
 
       - name: Start deployment
-        uses: bobheadxi/deployments@v1.5.0
+        uses: bobheadxi/deployments@648679e8e4915b27893bd7dbc35cb504dc915bc8 # v1.5.0
         id: start_deployment
         with:
           step: start
           env: ${{ needs.metadata.outputs.stage }}
 
       - name: Deploy
-        uses: appleboy/ssh-action@v1.2.1
+        uses: appleboy/ssh-action@7eaf76671a0d7eec5d98ee897acda4f968735a17 # v1.2.0
         env:
           STAGE: ${{ needs.metadata.outputs.stage }}
         with:
@@ -176,11 +157,10 @@ jobs:
           script: |
             cd /opt/docker/$PROJECT_NAME/$STAGE
             docker-compose pull
-            docker-compose run --rm web rails db:migrate
             docker-compose up -d
 
       - name: Finalize Sentry release
-        uses: getsentry/action-release@v1.10.5
+        uses: getsentry/action-release@ffb64465339ef6fb868e2fc261318d78ae0ed8d9 # v1.10.5
         env:
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
           SENTRY_ORG: ${{ vars.SENTRY_ORG_NAME }}
@@ -190,20 +170,18 @@ jobs:
           version: ${{ needs.merge.outputs.sha }}
           set_commits: skip
 
-      - name: Finish deployment
-        uses: bobheadxi/deployments@v1.5.0
-        if: steps.start_deployment.conclusion == 'success' && always()
-        with:
-          step: finish
-          status: ${{ job.status }}
-          deployment_id: ${{ steps.start_deployment.outputs.deployment_id }}
-          env: ${{ needs.metadata.outputs.stage }}
-          env_url: ${{ steps.get_url.outputs.environment_url }}
-
   update_check_run:
     name: Update Check Run
     runs-on: ubuntu-latest
-    needs: [branch_check, metadata, merge, continuous_integration, publish_image, deploy]
+    needs:
+      [
+        branch_check,
+        metadata,
+        merge,
+        continuous_integration,
+        publish_image,
+        deploy,
+      ]
     if: (github.ref_name == 'staging' || github.ref_name == 'master') && always()
     permissions:
       checks: write
@@ -220,12 +198,3 @@ jobs:
               break
             fi
           done
-
-      - name: Update Continuous Delivery check run
-        uses: LouisBrunner/checks-action@v2.0.0
-        with:
-          sha: ${{ needs.merge.outputs.sha }}
-          token: ${{ github.token }}
-          name: Continuous Delivery
-          conclusion: ${{ steps.get_conclusion.outputs.conclusion }}
-          details_url: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
