--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -18,7 +18,7 @@ concurrency:
   group: cd-${{ github.ref_name }}
 
 env:
-  PROJECT_NAME: amber-ui
+  PROJECT_NAME: amber-api
 
 jobs:
   branch_check:
@@ -57,6 +57,7 @@ jobs:
                 echo 'has_diff=false' >> "$GITHUB_OUTPUT"
               fi
             fi
+
             echo 'stage=production' >> "$GITHUB_OUTPUT"
           else
             echo 'stage=staging' >> "$GITHUB_OUTPUT"
@@ -133,6 +134,15 @@ jobs:
       inputs.merge && (fromJSON(needs.metadata.outputs.has_diff) || inputs.ignore_metadata_diff) && success()) ||
       ((!inputs.merge || !(fromJSON(needs.metadata.outputs.has_diff) || inputs.ignore_metadata_diff)) && !cancelled()))
     steps:
+      - name: Get environment URL
+        id: get_url
+        run: |
+          if [ "$GITHUB_REF_NAME" = 'master' ]; then
+            echo 'environment_url=https://csvalpha.nl/api' >> "$GITHUB_OUTPUT"
+          else
+            echo 'environment_url=https://staging.csvalpha.nl/api' >> "$GITHUB_OUTPUT"
+          fi
+
       - name: Checkout code
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
@@ -146,7 +156,7 @@ jobs:
           env: ${{ needs.metadata.outputs.stage }}
 
       - name: Deploy
-        uses: appleboy/ssh-action@7eaf76671a0d7eec5d98ee897acda4f968735a17 # v1.2.0
+        uses: appleboy/ssh-action@8faa84277b88b6cd1455986f459aa66cf72bc8a3 # v1.2.1
         env:
           STAGE: ${{ needs.metadata.outputs.stage }}
         with:
@@ -157,6 +167,7 @@ jobs:
           script: |
             cd /opt/docker/$PROJECT_NAME/$STAGE
             docker-compose pull
+            docker-compose run --rm web rails db:migrate
             docker-compose up -d
 
       - name: Finalize Sentry release
@@ -169,6 +180,16 @@ jobs:
           environment: ${{ needs.metadata.outputs.stage }}
           version: ${{ needs.merge.outputs.sha }}
           set_commits: skip
+   
+      - name: Finish deployment
+        uses: bobheadxi/deployments@648679e8e4915b27893bd7dbc35cb504dc915bc8 # v1.5.0
+        if: steps.start_deployment.conclusion == 'success' && always()
+        with:
+          step: finish
+          status: ${{ job.status }}
+          deployment_id: ${{ steps.start_deployment.outputs.deployment_id }}
+          env: ${{ needs.metadata.outputs.stage }}
+          env_url: ${{ steps.get_url.outputs.environment_url }}        
 
   update_check_run:
     name: Update Check Run
@@ -198,3 +219,11 @@ jobs:
               break
             fi
           done
+      - name: Update Continuous Delivery check run
+        uses: LouisBrunner/checks-action@6b626ffbad7cc56fd58627f774b9067e6118af23 # v2.0.0
+        with:
+          sha: ${{ needs.merge.outputs.sha }}
+          token: ${{ github.token }}
+          name: Continuous Delivery
+          conclusion: ${{ steps.get_conclusion.outputs.conclusion }}
+          details_url: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
