--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -93,7 +93,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     env:
-      CAMO_KEY: camo_key_123
+      CAMO_KEY: secret_camo_key
     services:
       camo:
         image: rx14/camo.cr:latest
